addons/web_tour/static/src/less/tip.less
.o_tooltip {
    @o-tip-background-color: #875a7b;
    @o-tip-size: 26px;
    @o-tip-border-width: 2px;

    @o-arrow-length: floor(@o-tip-size * 0.5);
    @o-arrow-width: floor(@o-tip-size * 0.8);
    @o-arrow-integration: floor(@o-tip-size * 0.1);

    @o-anim-duration-in: 300ms;
    @o-size-anim-duration-in: floor(@o-anim-duration-in * 3 / 4);
    @o-size-anim-delay-in: floor(@o-anim-duration-in / 4);
    @o-radius-anim-duration-in: floor(@o-anim-duration-in / 2);
    @o-radius-anim-delay-in: floor(@o-anim-duration-in * 0);
    @o-bg-color-duration-in: floor(@o-anim-duration-in * 1);
    @o-bg-color-delay-in: floor(@o-anim-duration-in * 0);
    @o-arrow-duration-in: floor(@o-anim-duration-in / 2);
    @o-arrow-delay-in: floor(@o-anim-duration-in * 0);
    @o-content-opacity-duration-in: floor(@o-anim-duration-in / 3);
    @o-content-opacity-delay-in: floor(@o-anim-duration-in * 2 / 3);
    @o-content-visibility-delay-in: floor(@o-anim-duration-in * 0);
    @o-arrow-white-duration-in: floor(@o-anim-duration-in * 1);
    @o-arrow-white-delay-in: floor(@o-anim-duration-in * 0);

    @o-anim-duration-out: 200ms;
    @o-size-anim-duration-out: floor(@o-anim-duration-out * 2 / 3);
    @o-size-anim-delay-out: floor(@o-anim-duration-out * 0);
    @o-radius-anim-duration-out: floor(@o-anim-duration-out * 2 / 3);
    @o-radius-anim-delay-out: floor(@o-anim-duration-out / 3);
    @o-bg-color-duration-out: floor(@o-anim-duration-out * 1);
    @o-bg-color-delay-out: floor(@o-anim-duration-out * 0);
    @o-arrow-duration-out: floor(@o-anim-duration-out / 2);
    @o-arrow-delay-out: floor(@o-anim-duration-out / 2);
    @o-content-opacity-duration-out: floor(@o-anim-duration-out / 3);
    @o-content-opacity-delay-out: floor(@o-anim-duration-out * 0);
    @o-content-visibility-delay-out: floor(@o-anim-duration-out / 2);

    box-sizing: content-box;
    position: absolute;
    width: @o-tip-size;
    height: @o-tip-size;
    border: @o-tip-border-width solid @odoo-brand-primary;
    border-radius: 50%;
    z-index: @zindex-modal+1;
    background-color: @o-tip-background-color;
    box-shadow: 0 0 2px 0 @odoo-brand-lightsecondary;
    cursor: pointer;

    .o-animation(move-bottom-top, 500ms, ease-in, 0ms, infinite, alternate);
    &.right, &.left {
        .animation-name(move-left-right);
    }
    transition: width @o-size-anim-duration-out ease @o-size-anim-delay-out, height @o-size-anim-duration-out ease @o-size-anim-delay-out, margin @o-size-anim-duration-out ease @o-size-anim-delay-out, border-radius @o-radius-anim-duration-out ease @o-radius-anim-delay-out, background-color @o-bg-color-duration-out ease @o-bg-color-delay-out;

    &::before {
        content: "";
        border: 0 solid rgba(0, 0, 0, 0);
        transition: all @o-arrow-duration-out ease @o-arrow-delay-out;
    }
    &.right::before {
        .o-position-absolute(@left: -@o-arrow-length+@o-arrow-integration, @top: (@o-tip-size - @o-arrow-width) / 2);
        border-width: @o-arrow-width/2 @o-arrow-length @o-arrow-width/2 0;
        border-right-color: @o-tip-background-color;
    }
    &.top::before {
        .o-position-absolute(@bottom: -@o-arrow-length+@o-arrow-integration, @left: (@o-tip-size - @o-arrow-width) / 2);
        border-width: @o-arrow-length @o-arrow-width/2 0 @o-arrow-width/2;
        border-top-color: @o-tip-background-color;
    }
    &.left::before {
        .o-position-absolute(@right: -@o-arrow-length+@o-arrow-integration, @top: (@o-tip-size - @o-arrow-width) / 2);
        border-width: @o-arrow-width/2 0 @o-arrow-width/2 @o-arrow-length;
        border-left-color: @o-tip-background-color;
    }
    &.bottom::before {
        .o-position-absolute(@top: -@o-arrow-length+@o-arrow-integration, @left: (@o-tip-size - @o-arrow-width) / 2);
        border-width: 0 @o-arrow-width/2 @o-arrow-length @o-arrow-width/2;
        border-bottom-color: @o-tip-background-color;
    }

    &::after {
        @square-size: @o-tip-size*sqrt(2)/2;
        @square-pos: (@o-tip-size - @square-size)/2;
        .o-position-absolute(@square-pos, @square-pos, @square-pos, @square-pos);
        content: "?";
        line-height: @square-size;
        text-align: center;
        font-size: @square-size;
        font-weight: 800;
        border-color: @o-tip-background-color;
        color: lightgray;
        transition: margin @o-size-anim-duration-out ease @o-size-anim-delay-out;
    }

    > .o_tooltip_overlay {
        display: none;
        .o-position-absolute(0, 0, 0, 0);
        z-index: -1;
    }
    > .o_tooltip_content {
        padding: 8px 15px;
        opacity: 0;
        visibility: hidden;
        transition: opacity @o-content-opacity-duration-out ease @o-content-opacity-delay-out, visibility 0s ease @o-content-visibility-delay-out;
        color: black;

        .o_skip_tour {
            display: inline-block;
            margin-top: 5px;
            cursor: pointer;
            color: gray;
        }
    }

    &.active {
        animation-play-state: paused;
        border-radius: 0;
        background-color: white;

        transition: width @o-size-anim-duration-in ease @o-size-anim-delay-in, height @o-size-anim-duration-in ease @o-size-anim-delay-in, margin @o-size-anim-duration-in ease @o-size-anim-delay-in, border-radius @o-radius-anim-duration-in ease @o-radius-anim-delay-in, background-color @o-bg-color-duration-in ease @o-bg-color-delay-in;

        &::before {
            transition: all @o-arrow-duration-in ease @o-arrow-delay-in;
        }
        &::after {
            content: "";
            border: 0 solid rgba(0, 0, 0, 0);
        }

        > .o_tooltip_overlay {
            display: block;
        }
        > .o_tooltip_content {
            opacity: 1;
            visibility: visible;
            transition: opacity @o-content-opacity-duration-in ease @o-content-opacity-delay-in, visibility 0s ease @o-content-visibility-delay-in;
        }

        &.right {
            &::before {
                left: -@o-arrow-length;
                border-right-color: @odoo-brand-primary;
            }
            &::after {
                .o-position-absolute(@left: -@o-arrow-length+@o-tip-border-width*2, @top: (@o-tip-size - @o-arrow-width) / 2);
                border-width: @o-arrow-width/2 @o-arrow-length @o-arrow-width/2 0;
                border-right-color: white;
                transition: border-right-color @o-arrow-white-duration-in ease @o-arrow-white-delay-in;
            }
        }
        &.top {
            &::before {
                bottom: -@o-arrow-length;
                border-top-color: @odoo-brand-primary;
            }
            &::after {
                .o-position-absolute(@bottom: -@o-arrow-length+@o-tip-border-width*2, @left: (@o-tip-size - @o-arrow-width) / 2);
                border-width: @o-arrow-length @o-arrow-width/2 0 @o-arrow-width/2;
                border-top-color: white;
                transition: border-top-color @o-arrow-white-duration-in ease @o-arrow-white-delay-in;
            }
        }
        &.left {
            &::before {
                right: -@o-arrow-length;
                border-left-color: @odoo-brand-primary;
            }
            &::after {
                .o-position-absolute(@right: -@o-arrow-length+@o-tip-border-width*2, @top: (@o-tip-size - @o-arrow-width) / 2);
                border-width: @o-arrow-width/2 0 @o-arrow-width/2 @o-arrow-length;
                border-left-color: white;
                transition: border-left-color @o-arrow-white-duration-in ease @o-arrow-white-delay-in;
            }
        }
        &.bottom {
            &::before {
                top: -@o-arrow-length;
                border-bottom-color: @odoo-brand-primary;
            }
            &::after {
                .o-position-absolute(@top: -@o-arrow-length+@o-tip-border-width*2, @left: (@o-tip-size - @o-arrow-width) / 2);
                border-width: 0 @o-arrow-width/2 @o-arrow-length @o-arrow-width/2;
                border-bottom-color: white;
                transition: border-bottom-color @o-arrow-white-duration-in ease @o-arrow-white-delay-in;
            }
        }
    }

    &.inverse {
        &.left, &.right {
            &::before, &.active::after {
                top: auto;
                bottom: (@o-tip-size - @o-arrow-width) / 2;
            }
        }
        &.top, &.bottom {
            &::before, &.active::after {
                left: auto;
                right: (@o-tip-size - @o-arrow-width) / 2;
            }
        }
    }
}

